--- a/languages/subway.pot
+++ b/languages/subway.pot
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Subway 2.0\n"
-"POT-Creation-Date: 2017-03-12 11:01+0100\n"
+"POT-Creation-Date: 2017-03-12 11:56+0100\n"
 "PO-Revision-Date: 2016-05-23 19:45+0800\n"
 "Last-Translator: \n"
 "Language-Team: Dunhakdis Software Creatives <dsc.official.mail@gmail.com>\n"
@@ -13,7 +13,8 @@ msgstr ""
 "X-Generator: Poedit 1.8.12\n"
 "X-Poedit-Basepath: ..\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Poedit-KeywordsList: __;_e;esc_html__\n"
+"X-Poedit-KeywordsList: __;_e;esc_html__;esc_attr_e;_n;_x;_ex;_nx;esc_attr__;"
+"esc_attr_x;esc_html_e;esc_html_x;_n_noop;_nx_noop;translate_nooped_plural\n"
 "X-Poedit-SearchPath-0: .\n"
 
 #: admin-settings.php:77
@@ -42,6 +43,16 @@ msgstr ""
 
 #: admin-settings.php:121
 msgid "Bypassing <em>wp-login.php</em>"
+msgstr ""
+
+#: admin-settings.php:162
+msgid ""
+"All settings related to the \n"
+"        \tvisibility of your site and pages."
+msgstr ""
+
+#: admin-settings.php:189
+msgid "Subway Settings"
 msgstr ""
 
 #: classes/subway-auth-redirect.php:59
@@ -93,6 +104,29 @@ msgid ""
 "the login form (this will be done automatically after saving)"
 msgstr ""
 
+#: settings-fields/field-subway-redirect-option-form.php:42
+msgid "Custom Page"
+msgstr ""
+
+#: settings-fields/field-subway-redirect-option-form.php:54
+msgid "Custom URL"
+msgstr ""
+
+#: settings-fields/field-subway-redirect-option-form.php:66
+msgid "Default Behavior"
+msgstr ""
+
+#: settings-fields/field-subway-redirect-option-form.php:74
+msgid ""
+"Where do you want your members to go after logging-in? You can pick a page, "
+"a Custom URL, or just a WordPress Default behavior. Page and Custom URL has "
+"its settings."
+msgstr ""
+
+#: settings-fields/field-subway-redirect-option-form.php:82
+msgid "Select Page"
+msgstr ""
+
 #: settings-fields/field-subway-redirect-option-form.php:91
 msgid "-"
 msgstr ""
@@ -105,6 +139,14 @@ msgid ""
 "redirect to a custom URL or domain."
 msgstr ""
 
+#: settings-fields/field-subway-redirect-option-form.php:108
+msgid "Enter Redirect URL:"
+msgstr ""
+
+#: settings-fields/field-subway-redirect-option-form.php:111
+msgid "http://"
+msgstr ""
+
 #: settings-fields/field-subway-redirect-option-form.php:117
 #, php-format
 msgid ""
@@ -115,6 +157,44 @@ msgid ""
 "<strong>%1$s</strong> will translate to http://yoursiteurl.com/users/"
 "<strong>4</strong> where \"4\" is equal to the %1$s. Both variables refer to "
 "the current user that is logged-in."
+msgstr ""
+
+#: settings-fields/field-subway-redirect-option-form.php:124
+msgid ""
+"Leave empty to use existing WordPress or other 3rd party plugin redirect "
+"option."
+msgstr ""
+
+#: settings-fields/field-subway-redirect-option-form.php:130
+msgid ""
+"Warning: External URLs are not supported by WordPress Function "
+"(wp_safe_redirect) and will be redirected back to default WordPress behavior."
+msgstr ""
+
+#: settings-fields/field-subway-redirect-option-form.php:140
+msgid ""
+"By choosing the default behavior, the redirect type will be set to the "
+"default WordPress' behavior. For example, if you have plugins like Peter's "
+"Login Redirect. This option will disable Subway's redirect and use the "
+"Peter's Login Redirect Instead."
+msgstr ""
+
+#: shortcodes/subway-shortcodes.php:142
+#, php-format
+msgid "Subway Error: Unable to find template file in: %1s"
+msgstr ""
+
+#: subway.php:51
+msgid ""
+"Notice: Subway uses PHP Class Namespaces \n"
+"\t        \t\twhich is only available in servers with PHP 5.3.0 version and "
+"above. \n"
+"\t        \t\tUpdate your server's PHP version. You can deactivate \n"
+"\t        \t\tSubway in the meantime."
+msgstr ""
+
+#: templates/login-form-lost-password.php:26
+msgid "Forgot Password"
 msgstr ""
 
 #: templates/login-form.php:27
@@ -181,6 +261,10 @@ msgstr ""
 
 #: templates/login-form.php:113
 msgid "Members only page. Please use the login form below to access the page."
+msgstr ""
+
+#: templates/login-form.php:122
+msgid "Account Sign-in"
 msgstr ""
 
 #: templates/login-form.php:137
