--- a/languages/subway-fr_FR.po
+++ b/languages/subway-fr_FR.po
@@ -1,143 +1,297 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Subway 1.0\n"
-"POT-Creation-Date: 2016-10-20 12:46+0200\n"
-"PO-Revision-Date: 2016-10-20 16:53+0200\n"
+"POT-Creation-Date: 2017-09-04 13:37+0800\n"
+"PO-Revision-Date: 2018-03-05 13:42+0800\n"
+"Last-Translator: \n"
 "Language-Team: Dunhakdis Software Creatives <dsc.official.mail@gmail.com>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.11\n"
+"X-Generator: Poedit 2.0.2\n"
 "X-Poedit-Basepath: ..\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Poedit-KeywordsList: __;_e;esc_html__\n"
-"Last-Translator: \n"
-"Language: fr\n"
-"X-Poedit-SearchPath-0: functions.php\n"
-"X-Poedit-SearchPath-1: login-form.php\n"
-"X-Poedit-SearchPath-2: private.php\n"
-"X-Poedit-SearchPath-3: subway.php\n"
-"X-Poedit-SearchPath-4: update-check.php\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Poedit-KeywordsList: __;_e;esc_html__;esc_html_e\n"
+"X-Poedit-SearchPath-0: .\n"
+"X-Poedit-SearchPathExcluded-0: languages\n"
 
-#: login-form.php:25
+#: admin-settings.php:77
+msgid "Pages Visibility"
+msgstr "Visibilité des pages"
+
+#: admin-settings.php:83
+msgid "Redirect Options"
+msgstr "Options de redirection"
+
+#: admin-settings.php:91
+msgid "Public Website"
+msgstr "Site web public"
+
+#: admin-settings.php:99
+msgid "Private Login Page"
+msgstr "Page de connexion de la zone privée"
+
+#: admin-settings.php:106
+msgid "Public Posts IDs"
+msgstr "ID des actualités publiques"
+
+#: admin-settings.php:114
+msgid "Redirect Type"
+msgstr "Type de redirection"
+
+#: admin-settings.php:121
+msgid "Bypassing <em>wp-login.php</em>"
+msgstr "Contourner la page <em>wp-login.php</em>"
+
+#: admin-settings.php:162
+msgid ""
+"All settings related to the \n"
+"        \tvisibility of your site and pages."
+msgstr ""
+"Tous les paramètres liés à la \n"
+"        \tvisibilité de votre site et de vos pages."
+
+#: admin-settings.php:189
+msgid "Subway Settings"
+msgstr "Paramètres Subway"
+
+#: classes/subway-auth-redirect.php:59
+msgid "Username and Password cannot be empty."
+msgstr "Le nom d'utilisateur et le mot de passe sont obligatoires"
+
+#: classes/subway-auth-redirect.php:80
+msgid "You have successfully logged-in. Redirecting you in few seconds..."
+msgstr "Vous vous êtes connecté avec succès. Nous allons vous rediriger dans quelques secondes..."
+
+#: classes/subway-enqueue.php:71
+msgid ""
+"An error occured while \n"
+"                    \ttransmitting the data. Refresh the page and try again"
+msgstr ""
+"Une erreur est survenue pendant \n"
+"                    \tla transmission des informations. Veuillez rafraichir la page et réessayer"
+
+#: settings-fields/field-subway-is-public-form.php:25
+msgid ""
+"This option will overwrite the 'Private Login Page' below. BuddyPress pages "
+"like user profile, members, and groups are still only available to the "
+"rightful owner of the profile."
+msgstr ""
+"Cette option outrepassera la 'Page de connexion de la zone privée' ci-dessous. Les pages "
+"tels que le profil utilisateur, les membres, et les groupes restent accessibles uniquement "
+"au propriétaire du profil."
+
+#: settings-fields/field-subway-lock-wp-admin.php:21
+#, php-format
+msgid ""
+"In case, you were locked out. Use the link below to bypass the log-in page "
+"and go directly \n"
+"\t\t\tto your website's wp-login URL (http://yoursiteurl.com/wp-login.php): "
+"<strong style='color: #e53935;'>%s</strong>"
+msgstr ""
+"Dans le cas où vous seriez bloqué. Utiliser le lien ci-dessous pour outrepasser la page de connexion "
+"et aller directement \n"
+"\t\t\tà la page de connexion WordPress de votre site web ayant une URL du type (http://yoursiteurl.com/wp-login.php): "
+"<strong style='color: #e53935;'>%s</strong>"
+
+#: settings-fields/field-subway-login-page-form.php:50
+msgid "---"
+msgstr "---"
+
+#: settings-fields/field-subway-login-page-form.php:54
+#, php-format
+msgid ""
+"Select a login page and save the changes to make your site private. Leave "
+"blank to make your site public. %1$s."
+msgstr ""
+"Sélectionner une page de connexion et sauvegarder les changements pour rendre votre site privé. Laisser "
+"vide pour rendre votre site public. %1$s."
+
+#: settings-fields/field-subway-login-page-form.php:54
+msgid ""
+"You need to add \"[subway_login]\" shortcode in the selected page to show "
+"the login form (this will be done automatically after saving)"
+msgstr ""
+"Vous devez ajouter le raccourci \"[subway_login]\" dans la page sélectionnée pour afficher "
+"le formulaire de connexion (ceci sera fait automatiquement après avoir sauvegardé)"
+
+#: settings-fields/field-subway-redirect-option-form.php:42
+msgid "Custom Page"
+msgstr "Page personnalisée"
+
+#: settings-fields/field-subway-redirect-option-form.php:54
+msgid "Custom URL"
+msgstr "URL personnalisée"
+
+#: settings-fields/field-subway-redirect-option-form.php:66
+msgid "Default Behavior"
+msgstr "Comportement par défaut"
+
+#: settings-fields/field-subway-redirect-option-form.php:74
+msgid ""
+"Where do you want your members to go after logging-in? You can pick a page, "
+"a Custom URL, or just a WordPress Default behavior. Page and Custom URL has "
+"its settings."
+msgstr ""
+"Ou voulez-vous que vos membres soient redirigés après s'être connecté? Vous pouvez choisir une page, "
+"une URL personnalisée, ou utilisé le comportement par défaut de WordPress. Page et URL ont "
+"chacun leur paramètre spécifique."
+
+#: settings-fields/field-subway-redirect-option-form.php:82
+msgid "Select Page"
+msgstr "Sélectioner une page"
+
+#: settings-fields/field-subway-redirect-option-form.php:91
+msgid "-"
+msgstr "-"
+
+#: settings-fields/field-subway-redirect-option-form.php:99
+msgid ""
+"The selected page will be used as the redirect endpoint for all of your "
+"users. Selecting blank (-) will redirect the user to the default redirect "
+"defined in WordPress or other plugins. Choose \"Custom URL\" if you want to "
+"redirect to a custom URL or domain."
+msgstr ""
+"La page sélectionnée sera utilisée comme cible de redirection pour tous vos "
+"utilisateurs. En choisissant (-) ils seront redirigés par le paramètre par défaut "
+"défini dans WordPress ou les autres extensions. Choisissez \"URL personnalisée\" si vous voulez "
+"les rediriger vers cette URL personnalisée ou un domaine."
+
+#: settings-fields/field-subway-redirect-option-form.php:117
+#, php-format
+msgid ""
+"When entering a custom domain, you can use a variable string such us: %1$s "
+"and %2$s. For example, http://yoursiteurl.com/members/<strong>%2$s</strong> "
+"will translate to http://yoursiteurl/members/<strong>admin</strong> where "
+"\"admin\" is equal to the %2$s variable; http://yoursiteurl.com/users/"
+"<strong>%1$s</strong> will translate to http://yoursiteurl.com/users/"
+"<strong>4</strong> where \"4\" is equal to the %1$s. Both variables refer to "
+"the current user that is logged-in."
+msgstr ""
+"Quand vous utiliser un domaine personnalisé, vous pouvez utiliser des variables telles que: %1$s "
+"et %2$s. Par exemple, l'URL http://yoursiteurl.com/members/<strong>%2$s</strong> "
+"sera transformée en http://yoursiteurl/members/<strong>admin</strong> où "
+"\"admin\" est égale à la variable %2$s ; http://yoursiteurl.com/users/"
+"<strong>%1$s</strong> sera transformée en http://yoursiteurl.com/users/"
+"<strong>4</strong> où \"4\" est égale à la variable %1$s. Ces variables références "
+"l'utilisateur actuellement connecté."
+
+#: settings-fields/field-subway-redirect-option-form.php:130
+msgid ""
+"Warning: External URLs are not supported by WordPress Function "
+"(wp_safe_redirect) and will be redirected back to default WordPress behavior."
+msgstr ""
+"Attention: Les URLs externes ne sont pas supportées par la fonction (wp_safe_redirect) "
+"de WordPress et seront redirigées vers le comportement par défaut de WordPress."
+
+#: settings-fields/field-subway-redirect-option-form.php:140
+msgid ""
+"By choosing the default behavior, the redirect type will be set to the "
+"default WordPress' behavior. For example, if you have plugins like Peter's "
+"Login Redirect. This option will disable Subway's redirect and use the "
+"Peter's Login Redirect Instead."
+msgstr ""
+"En choisissant le comportement par défaut, le type de redirection sera défini par le comportement "
+"par défaut de WordPress. Par exemple, si vous avez une extension comme Peter's "
+"Login Redirect. Cette option désactivera la redirection de l'extension Subway et utilisera celle de "
+"l'extension Peter's Login Redirect à la place."
+
+#: shortcodes/subway-shortcodes.php:101
 msgid "Username"
-msgstr "Nom d’utilisateur"
+msgstr "Nom d'utilisateur"
 
-#: login-form.php:26
+#: shortcodes/subway-shortcodes.php:102
 msgid "Password"
 msgstr "Mot de passe"
 
-#: login-form.php:27
+#: shortcodes/subway-shortcodes.php:103
 msgid "Remember Me"
 msgstr "Se souvenir de moi"
 
-#: login-form.php:28
+#: shortcodes/subway-shortcodes.php:104
 msgid "Log In"
 msgstr "Connexion"
 
-#: login-form.php:50
+#: shortcodes/subway-shortcodes.php:155
+#, php-format
+msgid "Subway Error: Unable to find template file in: %1s"
+msgstr "Erreur Subway: Impossible de trouver le fichier modèle dans: %1s"
+
+#: subway.php:51
 msgid ""
-"Error: There was an error trying to sign-in to your account. Make sure your "
-"credentials are correct"
+"Notice: Subway uses PHP Class Namespaces \n"
+"\t        \t\twhich is only available in servers with PHP 5.3.0 version and "
+"above. \n"
+"\t        \t\tUpdate your server's PHP version. You can deactivate \n"
+"\t        \t\tSubway in the meantime."
 msgstr ""
-"Erreur: Il y eue une erreur lors de la tentative de connexion à votre "
-"compte. Veuillez vérifier vos données de connexion."
+"Information: Subway utilise la fonction PHP Class Namespaces \n"
+"\t        \t\tqui est seulement disponible dans la version 5.3.0 et supérieur "
+"de PHP. \n"
+"\t        \t\tMettez à jour la version PHP de votre serveur ou désactiver \n"
+"\t        \t\tl'extension Subway."
 
-#: login-form.php:53
-msgid "Required: Username and Password cannot not be empty."
-msgstr ""
-
-#: login-form.php:56
-msgid "Required: Username cannot not be empty."
-msgstr ""
-
-#: login-form.php:59
-msgid "Required: Password cannot not be empty."
-msgstr ""
-
-#: login-form.php:62
-msgid "Facebook email is invalid or is not verified."
-msgstr ""
-
-#: login-form.php:65
-msgid "Facebook Application Error. Misconfig or App is rejected."
-msgstr ""
-
-#: login-form.php:68
-msgid "Unable to fetch your Facebook profile."
-msgstr ""
-
-#: login-form.php:71
-msgid "Username or e-mail already exists"
-msgstr ""
-
-#: login-form.php:74
-msgid "Google Plus Authentication Error. Invalid Client ID or Secret."
-msgstr ""
-
-#: login-form.php:90
-msgid "Error: Invalid username and password combination."
-msgstr "Erreur: Nom d’utilisateur et/ou mot de passe incorrect."
-
-#: login-form.php:97
-msgid "Oops! Looks like you need to login in order to view the page."
-msgstr "Vous devez vous identifier avant de pouvoir afficher cette page."
-
-#: login-form.php:105
-msgid "Account Sign-in"
-msgstr "Connexion"
-
-#: login-form.php:152
+#: templates/login-form-lost-password.php:26
 msgid "Forgot Password"
-msgstr "J’ai oublié mon mot de passe"
+msgstr "Mot de passe oublié"
 
-#: private.php:132
-msgid "Pages Visibility Settings"
-msgstr ""
-
-#: private.php:140
-msgid "Display the following pages and posts in public"
-msgstr ""
-
-#: private.php:149
-msgid "Make my Intranet public"
-msgstr ""
-
-#: private.php:158
-msgid "Login Page"
-msgstr ""
-
-#: private.php:191
+#: templates/login-form.php:43
 msgid ""
-"Enter the IDs of posts and/or pages that you wanted to show in public. You "
-"need to separate it by \",\"(comma), <br>for example: 143,123,213. "
-"Alternatively, you can enable public viewing of all of your pages and posts "
-"by checking <br>the option below."
+"There was an error trying to sign-in to your account. Make sure the "
+"credentials below are correct."
 msgstr ""
+"Il y a eu une erreur lors de la tentative de connexion à votre compte. Merci "
+"de vérifier vos informations d'authentification ci-dessous."
 
-#: private.php:204
-msgid ""
-"Pages like user profile, members, and groups are still only available to the "
-"rightful owner of the profile"
-msgstr ""
+#: templates/login-form.php:46
+msgid "Required: Username and Password cannot be empty."
+msgstr "Requis: Le nom d'utilisateur et le mot de passe sont obligatoires"
 
-#: private.php:241
-msgid "Select Page"
-msgstr ""
+#: templates/login-form.php:49
+msgid "Required: Username cannot be empty."
+msgstr "Requis: Le nom d'utilisateur est obligatoire"
 
-#: private.php:244
-msgid ""
-"Select a page to use as a login page for your website. <strong style=\"color:"
-"red;\">You need to add \"[subway_login]\" shortcode in the selected page<br> "
-"to show the login form</strong>."
-msgstr ""
+#: templates/login-form.php:52
+msgid "Required: Password cannot be empty."
+msgstr "Requis: Le mot de passe est obligatoire"
 
-#: update-check.php:442
-msgid ""
-"The plugin has been updated, but could not be reactivated. Please reactivate "
-"it manually."
-msgstr ""
+#: templates/login-form.php:55
+msgid "Facebook email address is invalid or is not yet verified."
+msgstr "Votre adresse email Facebook est invalide ou n'a pas encore été vérifié."
 
-#: update-check.php:443
-msgid "Plugin reactivated successfully."
-msgstr ""
+#: templates/login-form.php:58
+msgid "Facebook Application Error. Misconfigured or App is rejected."
+msgstr "Erreur avec l'application Facebook. Mauvaise configuration ou application rejetée"
+
+#: templates/login-form.php:61
+msgid "Unable to fetch your Facebook Profile."
+msgstr "Impossible de récupérer votre profil Facebook"
+
+#: templates/login-form.php:64
+msgid "Username or email address already exists"
+msgstr "Le nom d'utilisateur ou l'adresse email existe déjà"
+
+#: templates/login-form.php:67
+msgid "Google Plus Authentication Error. Invalid Client ID or Secret."
+msgstr "Erreur avec l'authentification Google Plus. ID client ou Secret invalide"
+
+#: templates/login-form.php:83
+msgid "Error: Invalid username and password combination."
+msgstr "Erreur: Le nom d'utilisateur et le mot de passe sont incorrects."
+
+#: templates/login-form.php:90
+msgid "You have logged out successfully."
+msgstr "Vous avez été déconnecté avec succès."
+
+#: templates/login-form.php:96
+msgid "Members only page. Please use the login form below to access the page."
+msgstr "Page réservée aux membres. Merci de vous authentifier pour accéder à cette page."
+
+#: templates/login-form.php:105
+msgid "Account Sign-in"
+msgstr "Créer un compte"
+
+#: templates/login-form.php:120
+msgid "Great! You have succesfully logged in."
+msgstr "Vous vous êtes connecté avec succès."
